--- a/aieBootstrap-2018/Game2d/Game2d.vcxproj
+++ b/aieBootstrap-2018/Game2d/Game2d.vcxproj
@@ -162,15 +162,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Asteroid_large.cpp" />
+    <ClCompile Include="Asteroid_medium.cpp" />
     <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="Asteroid.cpp" />
+    <ClCompile Include="Asteroid_small.cpp" />
     <ClCompile Include="Game2dApp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Asteroid_large.h" />
+    <ClInclude Include="Asteroid_medium.h" />
     <ClInclude Include="Bullet.h" />
-    <ClInclude Include="Asteroid.h" />
+    <ClInclude Include="Asteroid_small.h" />
     <ClInclude Include="Game2dApp.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
