--- a/Game Project - Bootstrap/Game2d/Game2d.vcxproj
+++ b/Game Project - Bootstrap/Game2d/Game2d.vcxproj
@@ -163,6 +163,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Asteroid_large.cpp" />
+    <ClCompile Include="AsteroidManager.cpp" />
     <ClCompile Include="Asteroid_medium.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Asteroid_small.cpp" />
@@ -172,6 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asteroid_large.h" />
+    <ClInclude Include="AsteroidManager.h" />
     <ClInclude Include="Asteroid_medium.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Asteroid_small.h" />
