Working on making the cirles spawn at random locations
Also adding dynamic array functionality

--- a/Game Project - Bootstrap/project2D/Project2D.vcxproj
+++ b/Game Project - Bootstrap/project2D/Project2D.vcxproj
@@ -179,6 +179,7 @@
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
     <ClInclude Include="circle.h" />
+    <ClInclude Include="dynamic_array.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
