--- a/Game Project - Bootstrap/project2D/Project2D.vcxproj.filters
+++ b/Game Project - Bootstrap/project2D/Project2D.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="circle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dynamic_array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
