--- a/Game Project - Bootstrap/project2D/Project2D.vcxproj
+++ b/Game Project - Bootstrap/project2D/Project2D.vcxproj
@@ -181,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application2D.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Button_play.h" />
     <ClInclude Include="Button_quit.h" />
     <ClInclude Include="Button_retry.h" />
