--- a/Game Project - Bootstrap/project2D/Project2D.vcxproj.filters
+++ b/Game Project - Bootstrap/project2D/Project2D.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="Button_retry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
